monitoring/DaemonSet-node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      name: node-exporter
  template:
    metadata:
      labels:
        name: node-exporter
    spec:
      containers:
      - args:
        - --path.rootfs=/host
        - --path.procfs=/host/proc
        - --path.sysfs=/host/sys
        - --collector.netdev
        - --collector.netstat
        - --collector.netclass
        image: quay.io/prometheus/node-exporter:v1.10.2
        imagePullPolicy: IfNotPresent
        name: node-exporter
        ports:
        - containerPort: 9100
          name: node-exporter
        volumeMounts:
        - mountPath: /host
          name: root
          readOnly: true
        - mountPath: /host/proc
          name: proc
          readOnly: true
        - mountPath: /host/sys
          name: sys
          readOnly: true
      hostNetwork: true
      hostPID: true
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - hostPath:
          path: /
          type: Directory
        name: root
      - hostPath:
          path: /proc
          type: Directory
        name: proc
      - hostPath:
          path: /sys
          type: Directory
        name: sys
  updateStrategy:
    type: RollingUpdate
