monitoring/DaemonSet-nut-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nut-exporter
  namespace: monitoring
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      name: nut-exporter
  template:
    metadata:
      labels:
        name: nut-exporter
    spec:
      containers:
      - args:
        - --nut.username=monuser
        image: ghcr.io/druggeri/nut_exporter:3.2.2
        imagePullPolicy: IfNotPresent
        name: nut-exporter
        ports:
        - containerPort: 9199
          name: nut
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      tolerations:
      - effect: NoSchedule
        operator: Exists
  updateStrategy:
    type: RollingUpdate
