monitoring/Service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: grafana-http
    port: 3000
    targetPort: 3000
  selector:
    name: grafana
