monitoring/Service-loki.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: loki
  name: loki
  namespace: monitoring
spec:
  ports:
  - name: loki-loki
    port: 3100
    targetPort: 3100
  selector:
    name: loki
