monitoring/Service-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9100"
    prometheus.io/scrape: "true"
  labels:
    name: node-exporter
  name: node-exporter
  namespace: monitoring
spec:
  ports:
  - name: node-exporter-node-exporter
    port: 9100
    targetPort: 9100
  selector:
    name: node-exporter
