monitoring/Service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: prometheus
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: prometheus-prometheus
    port: 9090
    targetPort: 9090
  selector:
    name: prometheus
