monitoring/Service-smartctl-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9633"
    prometheus.io/scrape: "true"
  labels:
    name: smartctl-exporter
  name: smartctl-exporter
  namespace: monitoring
spec:
  ports:
  - name: smartctl-exporter-smartctl
    port: 9633
    targetPort: 9633
  selector:
    name: smartctl-exporter
